# DuiLib_WC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/DuiLib/: CMakeLists.txt
src/DuiLib/Control/: UIGifAnim.cpp
src/FloatingLayout/: CMakeLists.txt  FloatingDlg.cpp  FloatingDlg.h  FloatingLayout.cpp  FloatingLayout.rc  MainWnd.cpp  MainWnd.h  Resource.h  stdafx.h
src/FloatingLayout/skin/: Thumbs.db  floating_dlg.xml  main.xml
src/HelloDemo/: CMakeLists.txt  HelloDemo.cpp  HelloDemo.rc  MainWnd.cpp  MainWnd.h  Resource.h
src/HelloDemo/skin/: main.xml
tmp/: layered.7z
